  added in the first unit testing framework. (Andrey)

- Implemented MySQL_Connection::setSessionVariable() for setting variables like
  sql_mode. (Andrey)

- Implemented MySQL_DatabaseMetaData::getColumnPrivileges(). (Andrey)

- cppconn/datatype.h changed and used again. Reimplemented the type subsystem to
  be more usable - more types for binary and non-binary strings. (Andrey)

- Initial implementation for MySQL_DatabaseMetaData::getImportedKeys() for
  MySQL versions before 5.0.16 . (Andrey)

- Implemented MySQL_ConnectionMetaData::getProcedureColumns(). (Andrey)

- make package_source packs now with bzip2. (Andrey)

- Re-added getTypeInfo() with information about all types supported by MySQL and
  the sql::DataType. (Andrey)

- Exchanged the implementation of MySQL_ConstructedResultSet to use more efficient
  non O(n) but O(1) access method. This should improve the speed with which
  the metadata result sets are used. Also, there is less copy during the
  construction of the result set, which means that all result sets returned from
  the metadata functions will be faster. (Andrey)

- Introduced, internally, sql::mysql::MyVal which has implicit constructors used
  in mysql_metadata.cpp to create result sets with more native data instead of
  always string (varchar). (Andrey)

- Renamed ResultSet::getLong() to ResultSet::getInt64(). resultset.h includes
  typdefs for Windows to be able to use int64_t. (Andrey)

- Introduced ResultSet::getUInt() and ResultSet::getUInt64(). (Andrey)

- Corrected handling of unsigned server types. Now returning correct values.
  (Andrey)

- Fixed handling of numeric columns in ResultSetMetaData::isCaseSensitive to
  return false. (Andrey)

- Better implementation for ResultSetMetaData::isReadOnly. Values generated
  from views are read-only. Seems that these generated values don't have `db`
  in MYSQL_FIELD set, while all normal columns do have. (Andrey)


Alpha  1.0.2 - 2008-12-19
